force-app/main/default/objects/echosign_dev1__SIGN_Agreement__c/fields/echosign_dev1__AgreementLocale__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__AgreementLocale__c</fullName>
    <description>Select the language of the recipients.</description>
    <inlineHelpText>Select the language of the recipients.</inlineHelpText>
    <label>Language</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Chinese (China)</fullName>
            </value>
            <value>
                <fullName>Chinese (Taiwan)</fullName>
            </value>
            <value>
                <fullName>Croatian (Croatia)</fullName>
            </value>
            <value>
                <fullName>Czech (Czech Republic)</fullName>
            </value>
            <value>
                <fullName>Danish (Denmark)</fullName>
            </value>
            <value>
                <fullName>Dutch (Netherlands)</fullName>
            </value>
            <value>
                <fullName>English (United Kingdom)</fullName>
            </value>
            <value>
                <fullName>English (United States)</fullName>
                <default>true</default>
                <label>English (United States)</label>
            </value>
            <value>
                <fullName>Finnish (Finland)</fullName>
            </value>
            <value>
                <fullName>French (France)</fullName>
            </value>
            <value>
                <fullName>German (Germany)</fullName>
            </value>
            <value>
                <fullName>Hungarian (Hungary)</fullName>
            </value>
            <value>
                <fullName>Icelandic (Iceland)</fullName>
            </value>
            <value>
                <fullName>Indonesian (Indonesia)</fullName>
            </value>
            <value>
                <fullName>Italian (Italy)</fullName>
            </value>
            <value>
                <fullName>Japanese (Japan)</fullName>
            </value>
            <value>
                <fullName>Korean (South Korea)</fullName>
            </value>
            <value>
                <fullName>Malay (Malaysia)</fullName>
            </value>
            <value>
                <fullName>Norwegian (Bokmal: Norway)</fullName>
            </value>
            <value>
                <fullName>Norwegian (Norway)</fullName>
            </value>
            <value>
                <fullName>Norwegian (Nynorsk: Norway)</fullName>
            </value>
            <value>
                <fullName>Polish (Poland)</fullName>
            </value>
            <value>
                <fullName>Portuguese (Brazil)</fullName>
            </value>
            <value>
                <fullName>Portuguese (Portugal)</fullName>
            </value>
            <value>
                <fullName>Romanian (Romania)</fullName>
            </value>
            <value>
                <fullName>Russian (Russia)</fullName>
            </value>
            <value>
                <fullName>Slovak (Slovakia)</fullName>
            </value>
            <value>
                <fullName>Slovenian (Slovenia)</fullName>
            </value>
            <value>
                <fullName>Spanish (Basque: Spain)</fullName>
            </value>
            <value>
                <fullName>Spanish (Catalan: Spain)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>