force-app/main/default/objects/echosign_dev1__SIGN_Agreement__c/listViews/echosign_dev1__All.listView-meta.xml
<ListView>
    <fullName>echosign_dev1__All</fullName>
    <columns>NAME</columns>
    <columns>echosign_dev1__StatusVisible__c</columns>
    <columns>echosign_dev1__Account__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>echosign_dev1__Process_Template__c</columns>
    <columns>echosign_dev1__Data_Mapping_Error__c</columns>
    <columns>echosign_dev1__Data_Mapping_Result__c</columns>
    <columns>echosign_dev1__Trigger_Process_Template__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>